# ExtendedVector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SharpVector.sln  SharpVector.vcxproj  SharpVector.vcxproj.filters  bitbucket-pipelines.yml
.github/packaging/: ExtendedVector.nuspec  LICENSE  LICENSE.txt  README.txt  SharpVector.nuspec  pack.bat
.github/workflows/: ExtendedVector-Examples.yml  ExtendedVector-Source.yml  ExtendedVector-Tests.yml  SharpVector-Build-CMake.yml  SharpVector-Build-MSBuild.yml  SharpVector-Examples.yml  SharpVector-Source.yml  SharpVector-Tests.yml  Tests.yml
App/: CMakeLists.txt  Main.cpp
Examples/: ErrorCodes.hpp  Examples.vcxproj  Examples.vcxproj.filters  Source.cpp
Examples/Examples/: BusinessObject.cpp  CitiesFilteringApplication.cpp  Coordinates.cpp
Lib/: CMakeLists.txt  Vector.hpp
Lib/Extension/: Extension.cpp  Extension.hpp
Lib/Wrapper/: Container.cpp  Container.hpp
Source/: CMakeLists.txt  Source.vcxitems  Source.vcxproj  Source.vcxproj.filters  Vector.cpp  Vector.hpp
Test/: CMakeLists.txt
Test/ContainerTests/: ContainerWrapperTest.cpp  ExtendedVectorTest.cpp
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  VectorTests.cpp
Tests/Test-old/: CMakeLists.txt  Test.cpp
